fix: styling and formatting fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@
     --color-card: #ffffff;
     --color-code: #f2f2f2;
     --color-code-block: #fafafa;
-    --color-gray-1: #f2f2f2;
+    --color-gray-1: #fafafa;
     --color-gray-2: #e0e0e0;
     --color-gray-3: #d1d1d1;
     --color-gray-4: #868686;
@@ -92,7 +92,7 @@
     --color-card: #2c2c2c;
     --color-code: #071e36;
     --color-code-block: #021427;
-    --color-gray-1: #010b15;
+    --color-gray-1: #242424;
     --color-gray-2: #2c2c2c;
     --color-gray-3: #243e57;
     --color-gray-4: #484848;
