--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @config '../../tailwind.config.js';
 
@@ -21,9 +21,27 @@
 }
 
 @utility bg-noise {
-  background-image: url('/images/bg-noise.png');
+  background-image: url("/images/bg-noise.png");
   background-size: 200px 200px;
   background-position: 0 0;
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
 }
 
 /*
@@ -172,12 +190,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     background-color: var(--color-post-background);
     -webkit-font-smoothing: antialiased;
-    /* color: var(--color-text); */
   }
-
-  /* * {
-    color: var(--color-text);
-  } */
 
   a {
     text-decoration: none;
